--- a/userFolder/userprofile/templates/userprofile/profile.html
+++ b/userFolder/userprofile/templates/userprofile/profile.html
@@ -48,7 +48,7 @@
         </nav>
 
         <div class="profile-logout">
-            <a href="#" class="logout-link">
+            <a href="{% url "logout" %}" class="logout-link">
                 <i class='bx bx-log-out'></i>
                 <span>Logout</span>
             </a>
