--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -10,39 +10,70 @@
     <h2>Create your account</h2>
     <p class="subtitle">Sign up to get started</p>
     
-    <form method="POST">
+    <form method="POST" novalidate> 
         {% csrf_token %}
+
+        {% if form.non_field_errors %}
+            <div class="form-group">
+                <div class="non-field-errors">
+                    {{ form.non_field_errors }}
+                </div>
+            </div>
+        {% endif %}
         
         <div class="form-row">
             <div class="form-group">
-                <label for="first_name">First name</label>
-                <input type="text" id="first_name" name="first_name" >
+                <label for="{{ form.first_name.id_for_label }}">First name</label>
+                {{ form.first_name }}
+                {% if form.first_name.errors %}
+                    <div class="error-list">
+                        {{ form.first_name.errors }}
+                    </div>
+                {% endif %}
             </div>
             <div class="form-group">
-                <label for="last_name">Last name</label>
-                <input type="text" id="last_name" name="last_name">
+                <label for="{{ form.last_name.id_for_label }}">Last name</label>
+                {{ form.last_name }}
+                {% if form.last_name.errors %}
+                    <div class="error-list">
+                        {{ form.last_name.errors }}
+                    </div>
+                {% endif %}
             </div>
         </div>
 
         <div class="form-group">
-            <label for="email">Email address</label>
-            {# This is the 'email' field your view already uses #}
-            <input type="email" id="email" name="email">
+            <label for="{{ form.email.id_for_label }}">Email address</label>
+            {{ form.email }}
+            {% if form.email.errors %}
+                <div class="error-list">
+                    {{ form.email.errors }}
+                </div>
+            {% endif %}
         </div>
 
         <div class="form-group">
-            <label for="password">Password</label>
-            {# This is the 'password' field your view already uses #}
-            <input type="password" id="password" name="password">
+            <label for="{{ form.password.id_for_label }}">Password</label>
+            {{ form.password }}
+            {% if form.password.errors %}
+                <div class="error-list">
+                    {{ form.password.errors }}
+                </div>
+            {% endif %}
         </div>
 
         <div class="form-group">
-            <label for="confirm_password">Confirm password</label>
-            <input type="password" id="confirm_password" name="confirm_password" >
+            <label for="{{ form.password_confirm.id_for_label }}">Confirm password</label>
+            {{ form.password_confirm }}
+            {% if form.password_confirm.errors %}
+                <div class="error-list">
+                    {{ form.password_confirm.errors }}
+                </div>
+            {% endif %}
         </div>
 
         <div class="form-group-checkbox">
-            <input type="checkbox" id="terms" name="terms" required>
+            <input type="checkbox" id="terms" name="terms">
             <label for="terms">I agree to the <a href="/terms">Terms and Conditions</a></label>
         </div>
 
@@ -51,14 +82,6 @@
     
     <p class="auth-switch">
         Already have an account? <a href="{% url "login" %}">Sign in</a>
-        {# Tip: Use {% url 'login' %} here if you have a login URL set up #}
     </p>
 </div>
 {% endblock content %}
-
-{% comment %} <form method="POST">{% csrf_token %}
-  <h2>Sign Up</h2>
-  <input type="email" name="email" placeholder="Email" required>
-  <input type="password" name="password" placeholder="Password" required>
-  <button type="submit">Sign Up</button>
-</form> {% endcomment %}
