--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>TUCK - {% block title %}Home{% endblock %}</title>
+    <title>SecondStrap - {% block title %}Home{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/breadcrumbs.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -20,7 +20,7 @@
 
     <header class="header">
         <nav class="navbar container">
-            <a href="/" class="logo">TUCK.INDIA</a>
+            <a href="/" class="logo">SecondStrap.in</a>
 
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
@@ -55,7 +55,7 @@
                 <h4>Contact & Service</h4>
                 <ul>
                     <li>+1 123 456 7890</li>
-                    <li>info@tuck.com</li>
+                    <li>info@secondstrap.com</li>
                     <li>FAQs</li>
                     <li>Returns</li>
                     <li>Shipping</li>
@@ -86,8 +86,8 @@
 
         <hr class="footer-divider">
         <div class="footer-bottom container">
-            <p>© 2023 TUCK All rights reserved.</p>
-            <p>Designed by TUCK</p>
+            <p>© 2023 secondstrap All rights reserved.</p>
+            <p>Designed by secondstrap</p>
         </div>
     </footer>
 
