admin dashboard home page is set and users page is set using class based view

--- a/admin_dashboard/templates/dashboard/dashboard.html
+++ b/admin_dashboard/templates/dashboard/dashboard.html
@@ -22,7 +22,7 @@
                     <i class="fa-solid fa-users"></i>
                 </div>
             </div>
-            <h2 class="stat-card-value">5</h2>
+            <h2 class="stat-card-value">{{total_users}}</h2>
             <p class="stat-card-footer">+12% from last month</p>
         </div>
         
@@ -33,7 +33,7 @@
                     <i class="fa-solid fa-box"></i>
                 </div>
             </div>
-            <h2 class="stat-card-value">5</h2>
+            <h2 class="stat-card-value">{{total_products}}</h2>
             <p class="stat-card-footer">+5% from last month</p>
         </div>
         
@@ -44,7 +44,7 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
             </div>
-            <h2 class="stat-card-value">5</h2>
+            <h2 class="stat-card-value">{{total_orders}}</h2>
             <p class="stat-card-footer">+15% from last month</p>
         </div>
 
@@ -55,7 +55,7 @@
                     <i class="fa-solid fa-dollar-sign"></i>
                 </div>
             </div>
-            <h2 class="stat-card-value">₹709.92</h2>
+            <h2 class="stat-card-value">₹{{total_revenue}}</h2>
             <p class="stat-card-footer">+18% from last month</p>
         </div>
     </div>
